--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+
+  <!-- fontawsome -->
+  <script src="https://kit.fontawesome.com/440094f740.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
