--- a/index.html
+++ b/index.html
@@ -21,19 +21,30 @@
 </head>
 
 <body>
-  <header></header>
+  <!-- header start -->
+  <header>
+
+  </header>
+  <!-- header end -->
+
+  <!-- main start -->
   <main class="main container">
 
-    <div class="search-box form-inline">
+
+    <section class="search-box form-inline">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
-    </div>
+    </section>
 
-    <div class="row">
+    <!-- all products list start -->
+    <section class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
         </div>
       </div>
+      <!-- all products list end -->
+
+      <!-- cost calculator start -->
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
           <table class="table">
@@ -83,12 +94,20 @@
           </div>
         </div>
       </div>
-    </div>
+      <!-- cost calculator end -->
+
+    </section>
   </main>
-  <footer></footer>
+  <!-- main end -->
+
+  <!-- footer start -->
+  <footer>
+
+  </footer>
+  <!-- footer start -->
 
   <!-- add javascript  file  -->
-  <script src="./js/app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
